vercel-deploy-design-v1

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,8 @@
+{
+  "home": "Home",
+  "about": "About",
+  "projects": "Projects",
+  "change theme dark": "Change to dark theme",
+  "change theme light": "Change to light theme"
  
+}
