final-hi-button

--- a/public/locales/en/projects.json
+++ b/public/locales/en/projects.json
@@ -1,6 +1,6 @@
 {
   "page title": "Projects - Nazareno Garma",
-  "projects title": "A selection of my fav works.",
+  "projects title": "My projects.",
   "project paragraph": "I love constantly learning and testing myself. I believe that the best way to learn is by doing, so I'm always working on personal projects.",
   "first project title": "World Currency Converter",
   "first project sentence": "Static currency converter made with HTML, CSS and JavaScript. It shows the exchange rate of the currencies.",
