--- a/public/locales/en/toolbox.json
+++ b/public/locales/en/toolbox.json
@@ -1,6 +1,6 @@
 {
   "page title": "Toolbox - Nazareno Garma",
-  "toolbox title": "Tools and software I use every day.",
+  "toolbox title": "My tools.",
   "theme": "#theme",
   "music": "#music",
   "font": "#font",
