--- a/public/locales/es/projects.json
+++ b/public/locales/es/projects.json
@@ -1,6 +1,6 @@
 {
   "page title": "Proyectos - Nazareno Garma",
-  "projects title": "Mis proyectos favoritos.",
+  "projects title": "Mis proyectos.",
   "project paragraph": "Me encanta aprender y ponerme a prueba 24/7. Considero que la mejor manera de aprender es haciendo, por lo que siempre estoy realizando proyectos personales.",
   "first project title": "Conversor De Divisas Mundial",
   "first project sentence": "Conversor de moneda estático hecho con HTML, CSS y JavaScript. Muestra el tipo de cambio de las monedas.",
