--- a/public/locales/es/toolbox.json
+++ b/public/locales/es/toolbox.json
@@ -1,5 +1,5 @@
 { "page title": "Caja de herramientas - Nazareno Garma",
-  "toolbox title": "Herramientas y software que uso todos los días.",
+  "toolbox title": "Mis herramientas.",
   "theme": "#tema",
   "music": "#música",
   "font": "#fuente",
